--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <div class="chat-container">
   <header>
-    <strong>Sharon (Smart Local)</strong>
+    <strong>Sharon (ai)</strong>
     <div id="status-dot" class="status-dot"></div>
   </header>
   <div id="messages">
