--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     .chat-container { width: 95%; max-width: 480px; height: 85vh; background: var(--card); border-radius: 16px; display: flex; flex-direction: column; border: 1px solid #333; box-shadow: 0 10px 30px rgba(0,0,0,0.5); overflow: hidden; }
     header { padding: 15px; background: #252525; border-bottom: 1px solid #333; display: flex; justify-content: space-between; align-items: center; }
     #messages { flex: 1; padding: 20px; overflow-y: auto; display: flex; flex-direction: column; gap: 12px; }
-    .message { max-width: 85%; padding: 10px 14px; border-radius: 15px; font-size: 0.95rem; }
-    .user-msg { align-self: flex-end; background: var(--accent); color: white; }
-    .ai-msg { align-self: flex-start; background: #333; }
+    .message { max-width: 85%; padding: 10px 14px; border-radius: 15px; font-size: 0.95rem; line-height: 1.4; }
+    .user-msg { align-self: flex-end; background: var(--accent); color: white; border-bottom-right-radius: 2px; }
+    .ai-msg { align-self: flex-start; background: #333; border-bottom-left-radius: 2px; }
     .status-dot { height: 10px; width: 10px; background: #ff5252; border-radius: 50%; }
     .status-dot.ready { background: #00e676; box-shadow: 0 0 8px #00e676; }
     .input-area { padding: 15px; background: #1a1a1a; border-top: 1px solid #333; }
@@ -26,7 +26,7 @@
 
 <div class="chat-container">
   <header><strong>Sharon AI</strong><div id="status-dot" class="status-dot"></div></header>
-  <div id="messages"><div class="message ai-msg" id="status-text">Checking security headers...</div></div>
+  <div id="messages"><div class="message ai-msg" id="status-text">Bypassing security filters...</div></div>
   <div class="input-area">
     <div style="font-size: 0.7rem; color: #888;">Chaos: <input type="number" id="temp-input" value="0.7" step="0.1" style="width:40px; background:none; border:1px solid #444; color:white;"></div>
     <div class="controls">
@@ -37,14 +37,16 @@
 </div>
 
 <script type="module">
-  // Use the @huggingface/transformers (the new official name)
-  import { pipeline, env } from "https://cdn.jsdelivr.net/npm/@huggingface/transformers@3.0.0";
+  // Import the most recent Transformers.js build
+  import { pipeline, env } from "https://cdn.jsdelivr.net/npm/@huggingface/transformers@3.2.1";
 
-  // --- CRITICAL COMPATIBILITY FIXES ---
+  // --- COMPATIBILITY FIXES FOR GITHUB PAGES ---
   env.allowRemoteModels = true;
-  env.backends.onnx.wasm.proxy = false; // Prevents the "Worker" security block
-  env.backends.onnx.wasm.numThreads = 1; // Disables multi-threading to avoid SharedArrayBuffer errors
-  
+  env.backends.onnx.wasm.proxy = false; 
+  env.backends.onnx.wasm.numThreads = 1;
+  // This line often fixes the "Unauthorized" error by ensuring headers are clean
+  env.remoteHost = "https://huggingface.co/"; 
+
   const messagesDiv = document.getElementById("messages");
   const inputField = document.getElementById("user-input");
   const sendBtn = document.getElementById("send-btn");
@@ -52,24 +54,29 @@
   const statusText = document.getElementById("status-text");
 
   let generator = null;
-  let chatHistory = [{ role: "system", content: "You are Sharon, a sarcastic AI." }];
+  let chatHistory = [{ role: "system", content: "You are Sharon, a sarcastic AI assistant." }];
 
   async function init() {
     try {
-      statusText.innerText = "Downloading brain (135MB)...";
+      statusText.innerText = "Requesting brain cells from the cloud...";
       
-      generator = await pipeline("text-generation", "onnx-community/SmolLM2-135M-Instruct-v0.2", {
-        device: "wasm", // Force CPU/WASM for max compatibility
+      // Using a slightly different path that often has better CORS permissions
+      generator = await pipeline("text-generation", "onnx-community/SmolLM2-135M-Instruct", {
+        progress_callback: (p) => {
+          if (p.status === 'progress') {
+            statusText.innerText = `Downloading: ${Math.round(p.progress)}%`;
+          }
+        }
       });
 
       statusDot.classList.add("ready");
-      statusText.innerText = "Sharon is online. Type something below.";
+      statusText.innerText = "I'm in! Let's cause some chaos.";
       inputField.disabled = false;
       sendBtn.disabled = false;
-      inputField.placeholder = "Talk to Sharon...";
+      inputField.placeholder = "Say something...";
     } catch (e) {
       console.error(e);
-      statusText.innerText = "Error: " + e.message.substring(0, 50) + "... Try refreshing or using Chrome.";
+      statusText.innerText = "Access Denied. Try a different browser or click the URL again.";
     }
   }
 
@@ -102,17 +109,18 @@
         do_sample: true
       });
 
-      messagesDiv.removeChild(t);
+      if (messagesDiv.contains(t)) messagesDiv.removeChild(t);
       const response = output[0].generated_text.at(-1).content;
       
       addMsg(response, "ai");
       chatHistory.push({ role: "assistant", content: response });
-      if (chatHistory.length > 10) chatHistory = [chatHistory[0], ...chatHistory.slice(-6)];
+      if (chatHistory.length > 8) chatHistory = [chatHistory[0], ...chatHistory.slice(-6)];
     } catch (err) {
-      addMsg("Brain cramp! Error: " + err.message, "ai");
+      addMsg("Error: " + err.message, "ai");
     }
     inputField.disabled = false;
     inputField.focus();
+    sendBtn.disabled = false;
   }
 
   sendBtn.onclick = talk;
