--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sharon AI (Chaos Control)</title>
+  <title>Sharon AI </title>
   <style>
     :root { --bg: #121212; --card: #1e1e1e; --accent: #7c4dff; --text: #e0e0e0; }
     body { margin: 0; font-family: 'Segoe UI', sans-serif; background: var(--bg); color: var(--text); display: flex; justify-content: center; align-items: center; height: 100vh; }
